# arel-mlops

./: .dockerignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
notebooks/: 1.0-demo-notebook.py  1.0-demo.bak.py
presentation/: presentation.html  presentation.md
src/: dashboard.py  data_gen.py  pipeline.py
