[project]
name = "arel-mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "ipykernel>=7.2.0",
  "nbformat>=5.10.4",
  "numpy>=2.4.3",
  "pandas>=2.3.3",
  "plotly>=5.24.1",
  "prefect>=3.6.22",
  "psycopg2-binary>=2.9.11",
  "scikit-learn>=1.8.0",
  "sqlalchemy>=2.0.48",
  "streamlit>=1.55.0",
]
